--- a/Web Applications/TM_Website/Html_Pages/GuidanceItemEditor/GuidanceItemEditor.html
+++ b/Web Applications/TM_Website/Html_Pages/GuidanceItemEditor/GuidanceItemEditor.html
@@ -3,7 +3,8 @@
     <head>			
         <link  href="/aspx_Pages/scriptCombiner.ashx?s=HomePage_CSS&ct=css" 				type="text/css" rel="stylesheet" /> 
         <link  href="/Css/ArticleEditor.css" type="text/css" rel="stylesheet" />		
-        <script src="/aspx_Pages/scriptCombiner.ashx?s=WebServices_JS&dontMinify=true"						type="text/javascript"></script>	        		
+        <script src="/aspx_Pages/scriptCombiner.ashx?s=WebServices_JS&dontMinify=true"						type="text/javascript"></script>
+        <script src="/Javascript/uuid-generator.js" type="text/javascript"></script>
         <script src="/Javascript/Html_Pages/GuidanceItemEditor/GuidanceItemEditor.js" type="text/javascript"></script>
     </head>
     <body>	
