Moved JS files, bundling and preview page per article.

--- a/Web Applications/TM_Website/Html_Pages/GuidanceItemEditor/cleditor/GuidanceItemEditor_CLEditor.html
+++ b/Web Applications/TM_Website/Html_Pages/GuidanceItemEditor/cleditor/GuidanceItemEditor_CLEditor.html
@@ -1,6 +1,6 @@
 <link href="/javascript/htmlEditors/CLEditor/jquery.cleditor.css"  rel="stylesheet" type="text/css" />	 
 <script src="/javascript/htmlEditors/CLEditor/jquery.cleditor.js" type="text/javascript" ></script>
-<script src="/Javascript/Html_Pages/GuidanceItemEditor/cleditor/cleditor.js" type="text/javascript"></script>
+<script src="/Javascript/TM/cleditor.js" type="text/javascript"></script>
    
 <TextArea id="rawGuidanceItem"></TextArea>  
     
