Fixing couple UnitTest that broke in TeamCity Small fix to char prob also fixed in https://github.com/TeamMentor/Dev/pull/23 (but that Pull Request cannot be merged since the .dlls have changed)

--- a/Web Applications/TM_Website/Html_Pages/Gui/Panels/About_TeamMentor.html
+++ b/Web Applications/TM_Website/Html_Pages/Gui/Panels/About_TeamMentor.html
@@ -25,7 +25,7 @@
         <ul>
             <li><b>It gives you the secure coding standards you need:</b> TeamMentor is the only comprehensive resource available providing timely, relevant and prescriptive guidance on software vulnerabilities.</li>
             <li><b>It allows you to meet your compliance requirements:</b> Delivers secure coding guidance for PCI-DSS, the OWASP Top 10 and other popular frameworks.</li>
-            <li><b>It’s Extensible:</b> Easy to import security policies and cross-reference its secure coding checklists and examples that come out-of-the-box.</li>
+            <li><b>It's Extensible:</b> Easy to import security policies and cross-reference its secure coding checklists and examples that come out-of-the-box.</li>
         </ul>
 
 
