Enabled the editing of metadata from the Markdown editor and linked to diff page

--- a/Web Applications/TM_Website/Html_Pages/GuidanceItemViewer/GuidanceItemViewer.html
+++ b/Web Applications/TM_Website/Html_Pages/GuidanceItemViewer/GuidanceItemViewer.html
@@ -45,9 +45,9 @@
         </div>
         <div class="EditButtons">      
             <div id="links">
-                <a href="javascript:openGuidanceItemMarkdown()" class="IVButton">Markdown Editor</a>
-                <a href="javascript:openGuidanceItemEditor()" class="IVButton" id="Edit_WYSIWYG">Edit WYSIWYG</a>
-                <a href="javascript:openGuidanceItemNotepad()" class="IVButton">Edit Source</a>
+                <a href="javascript:openGuidanceItemMarkdown()" class="IVButton">Article Editor</a>
+                <!--<a href="javascript:openGuidanceItemEditor()" class="IVButton" id="Edit_WYSIWYG">Edit WYSIWYG</a>
+                <a href="javascript:openGuidanceItemNotepad()" class="IVButton">Edit Source</a>-->
             </div>					
         </div>		
         <div class="ItemContent" id="itemContent">			 	
