Set version to Dev 4 - 10 Fixed couple bugs on the way the article diff was being found Set the MarkdownDeep extra mode to false since it was causing a couple probs with the existing HTML articles All HTML transformations are now done in Markdown Started removing code that is not doing to be needed anymore (like the HTML Sanitization and Preview page)

--- a/Web Applications/TM_Website/Html_Pages/ControlPanel/CSharp_REPL/Repl.html
+++ b/Web Applications/TM_Website/Html_Pages/ControlPanel/CSharp_REPL/Repl.html
@@ -85,9 +85,12 @@
 		  <p>Note that all your script executions are logged (see link on top) so don't put any sensitive data here :)</p>
         </div>
 
-		<textarea id="code" cols="120" rows="50">return TM_Xml_Database.Current.Path_XmlDatabase;
+          <textarea id="code" cols="120" rows="50">return TM_Xml_Database.Current.Path_XmlDatabase;
+
 //using TeamMentor.CoreLib;
-//O2Ref:TeamMentor.CoreLib.dll</textarea>
+//O2Ref:TeamMentor.CoreLib.dll
+//using FluentSharp.CoreLib;
+//O2Ref:FluentSharp.CoreLib.dll</textarea>
 		
         <div class="buttons">			
 			<button data-action="lint" class="btn danger" id="execute">Execute</button>
