--- a/Web Applications/TM_Website/Html_Pages/Gui/Pages/article_Html.html
+++ b/Web Applications/TM_Website/Html_Pages/Gui/Pages/article_Html.html
@@ -14,7 +14,7 @@
     <br />
 	 <div id="SI_Footer">
             <hr />
-            TeamMentor &copy; 2007-2014 all rights reserved - a <a href="http://www.securityinnovation.com/" target="_blank">Security Innovation</a>  eKnowledge Product | <a href="mailto:support@securityinnovation.com">Contact Us</a>
+            TEAM Mentor &copy; 2007-2014 all rights reserved - a <a href="http://www.securityinnovation.com/" target="_blank">Security Innovation</a>  eKnowledge Product | <a href="mailto:support@securityinnovation.com">Contact Us</a>
         </div>
  </BODY>
 </HTML>
